base, corner-wall wall, ut, and corner-base-blind are all working.... really need to address the -z issue... cabinets are actually reversed.

--- a/public/html/templates/expandable/pill.html
+++ b/public/html/templates/expandable/pill.html
@@ -18,5 +18,7 @@
     <br>
     <div class='error' id='{{ERROR_CNT_ID()}}'></div>
   </div>
-  <div class="expand-body {{type()}}" ex-list-id='{{id()}}' key='{{key}}'></div>
+  <div class='expand-tab'>
+    <div class="expand-body {{type()}}" ex-list-id='{{id()}}' key='{{key}}'></div>
+  </div>
 </div>
