--- a/services/cabinet/public/html/templates/cabinet/head.html
+++ b/services/cabinet/public/html/templates/cabinet/head.html
@@ -1,6 +1,6 @@
 <div class='cabinet-header' cabinet-id='{{cabinet.id()}}'>
   {{$index}})
-  <input class='cabinet-id-input' prop-update='{{$index}}.name'
+  <input class='cabinet-id-input' name='name' prop-update='{{$index}}.name'
         index='{{$index}}' display-id='{{displayId}}' value='{{cabinet.name()}}'>
   Size:
   <div class='cabinet-dem-cnt' cabinet-id='{{cabinet.id()}}'>
