--- a/public/styles/expandable-list.css
+++ b/public/styles/expandable-list.css
@@ -80,13 +80,23 @@
   padding-bottom: 10pt;
 }
 
+.expand-tab {
+  padding-left: 10pt;
+}
+
 .expand-body.pill {
   display: inline-block;
-  padding-left: 20pt;
   border-radius: 0pt 0pt 10pt 10pt;
   background-color: whitesmoke;
   display: none;
+  padding: 0;
   padding-bottom: 10pt;
+
+  margin: 2pt;
+  border-style: solid;
+  border-width: 0 1pt 1pt 1pt;
+  border-color: gray;
+  border-radius: 10pt;
 }
 
 
