Miraculously 3d to 2d sihloutte(sp) logic is working and resonably fast

--- a/services/cabinet/public/html/templates/divider-controls.html
+++ b/services/cabinet/public/html/templates/divider-controls.html
@@ -17,7 +17,7 @@
 
   </span>
   <div class='open-pattern-input-cnt' opening-id='{{opening.id()}}'
-      {{opening.pattern().equal ? 'hidden' : ''}}>
+      {{opening.pattern().equals ? 'hidden' : ''}}>
     {{patternInputHtml}}
   </div>
 </div>
