--- a/services/cabinet/public/html/templates/managers/template/joints/body.html
+++ b/services/cabinet/public/html/templates/managers/template/joints/body.html
@@ -1,3 +1,20 @@
+<div>
+  <b>
+    Sorry, I havent made a way to auto configure joints. So you'll have to help me out.
+  </b>
+  <div class='tab'>
+    <b>Center Axis</b>
+    <div class='tab'>
+      Tells me what direction to offset the center of the Male part.
+    </div>
+    <br>
+    <b>Demension Axis</b>
+    <div class='tab'>
+      Tells me what demension to expand by the given depth.(Prerotation)
+    </div>
+  </div>
+
+</div>
 {{jointInput.html()}}
 <input type="text" name="value" disabled >
 <input type="checkbox" name="convert" checked>
