--- a/services/cabinet/public/html/templates/order.html
+++ b/services/cabinet/public/html/templates/order.html
@@ -29,7 +29,10 @@
           <div id='model-cnt'>
             <div id='display-menu'></div>
             <div id='model-display-cnt'>
-              <canvas id="two-d-model"></canvas>
+              <div id="two-d-model">
+                <canvas id="two-d-model-canvas"></canvas>
+                <div class='orientation-controls'></div>
+              </div>
               <div id="three-d-model" class="viewer small">
                 <div class='inline left'>
                   <div class='orientation-controls'></div>
