--- a/services/cabinet/public/html/templates/orientation-arrows.html
+++ b/services/cabinet/public/html/templates/orientation-arrows.html
@@ -1,5 +1,5 @@
 <div class='orientation-arrows' id='{{navId()}}' l-id='{{id()}}'>
-  <table class='orientation-arrows-table' cellspacing="0" cellpadding="0">
+  <table class='orientation-arrows-table orient-arrows' cellspacing="0" cellpadding="0">
     <tr><td></td>                  <td dir='u'>&#8679;</td>                         <td></td></tr>
     <tr><td dir='l'>&#8678;</td>  <td dir='c'>{{space()}}&#8865;{{space()}}</td>    <td dir='r'>&#8680;</td></tr>
     <tr><td></td>                  <td dir='d'>&#8681;</td>                         <td></td></tr>
