--- a/services/cabinet/public/html/templates/three-view.html
+++ b/services/cabinet/public/html/templates/three-view.html
@@ -14,6 +14,7 @@
       <div class='center-vert'>Part Code: <b id='three-view-part-code-{{id()}}'></b></div>
       <span class='three-view-canvas-cnt'>
         <b>Three View Drawing</b>
+        <button class='three-view-draw-string-btn'>Copy Draw String</button>
         <canvas id="three-view" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
       </span>
     </div>
