--- a/services/cabinet/public/html/templates/order.html
+++ b/services/cabinet/public/html/templates/order.html
@@ -16,8 +16,10 @@
     </div>
     <div class='expandable-list' id='single-order-cnt'>
       <div class='center'>
+        <button id='paste-order'>Paste Order Json</button>
         <input id='order-name-input' class='header-input' size='20' type="text" name="order-name">
         <input id='order-version-input' class='header-input' size='20' type="text" name="order-version">
+        <button id='copy-order'>Copy Order Json</button>
       </div>
       <div id='main-display-menu' class='display-manager center'></div>
       <div id='display-cnt'>
