mike tree config ugly but basics are working

--- a/public/html/templates/input/decision/decisionTree.html
+++ b/public/html/templates/input/decision/decisionTree.html
@@ -1,4 +1,4 @@
-<div class='{{DecisionInputTree.class}}' root-id='{{wrapper.nodeId()}}'>
+<div class='{{DecisionInputTree.class}}' tree-id='{{tree.id()}}' root-id='{{wrapper.nodeId()}}'>
   {{inputHtml}}
   <button class='{{DecisionInputTree.buttonClass}}' root-id='{{wrapper.nodeId()}}'
         {{tree.hideButton ? 'hidden' : ''}}>
