--- a/public/html/templates/input/radio.html
+++ b/public/html/templates/input/radio.html
@@ -1,5 +1,5 @@
 <{{inline() ? 'span' : 'div'}}  class='input-cnt'{{hidden() ? ' hidden' : ''}}>
-  <label>{{description()}}</label>
+  <label>{{label()}}</label>
   <br>
   <div class='tab'>
     <span:t repeat='key, val in list()'>
