--- a/public/html/templates/input/decision/decision-modification.html
+++ b/public/html/templates/input/decision/decision-modification.html
@@ -1,7 +1,7 @@
 
-<{{tag()}} class='decision-input-cnt mod' node-id='{{_nodeId}}' {{reachable() ? '' : 'hidden'}}>
-  <span id='{{id}}'>
-    <span:t repeat='input in inputArray'
+<{{tag()}} class='decision-input-cnt mod' node-id='{{id()}}' {{reachable() ? '' : 'hidden'}}>
+  <span node-id='{{id()}}'>
+    <span:t repeat='input in inputArray()'
           class='decision-input-array-cnt pad {{class}}' index='{{$index}}'>
       {{input.html()}}
       <span>
@@ -9,12 +9,12 @@
           If {{input.name()}} = {{input.value()}}
         </button>
         <div class='condition-input-tree tab'></div>
-        <div class='children-recurse-cnt' value='{{input.value()}}'>{{childrenHtml(input.name(), true)}}</div>
+        <div class='children-recurse-cnt tab' value='{{input.value()}}'>{{childrenHtml($index, true)}}</div>
       </span>
       <br>
     </span:t>
   </span>
-  <div class='modification-add-input'>
+  <div class='modification-add-input tab'>
     {{inputTree().html()}}
   </div>
 </{{tag()}}>
