--- a/public/html/templates/input/decision/decision.html
+++ b/public/html/templates/input/decision/decision.html
@@ -1,11 +1,11 @@
 
-<{{tag()}} class='decision-input-cnt' node-id='{{_nodeId}}' {{reachable() ? '' : 'hidden'}}>
-  <span id='{{id}}'>
-    <span:t repeat='input in inputArray'
+<{{tag()}} class='decision-input-cnt' node-id='{{id()}}' {{reachable() ? '' : 'hidden'}}>
+  <span id='{{id()}}'>
+    <span:t repeat='input in inputArray()'
         class='decision-input-array-cnt pad {{class}}' index='{{$index}}'>
       {{input.html()}}
-      <div class='children-recurse-cnt' value='{{input.value()}}'>
-        {{childrenHtml(input.name())}}
+      <div class='children-recurse-cnt tab' value='{{input.value()}}'>
+        {{childrenHtml($index)}}
       </div>
     </span:t>
   </span>
