--- a/public/html/templates/input/input.html
+++ b/public/html/templates/input/input.html
@@ -1,8 +1,9 @@
-<{{inline() ? 'span' : 'div'}} class='input-cnt'{{hidden() ? ' hidden' : ''}}>
+<{{inline() ? 'span' : 'div'}} class='input-cnt'{{hidden() ? ' hidden' : ''}}
+      input-id={{id()}}>
   <label>{{label()}}</label>
   <input class='{{class()}}' list='input-list-{{id()}}' id='{{id()}}'
       placeholder='{{placeholder()}}' type='{{type()}}' name='{{name()}}'
-      {{attrString()}}>
+      {{attrString()}} {{checked()}}>
   <datalist id="input-list-{{id()}}">
     <option:t value="{{item}}" repeat='item in list()'></option:t>
   </datalist>
