--- a/public/html/templates/input/number.html
+++ b/public/html/templates/input/number.html
@@ -1,9 +1,8 @@
 <{{inline() ? 'span' : 'div'}} class='input-cnt'{{hidden() ? ' hidden' : ''}}
       input-id={{id()}}>
   <label>{{label()}}</label>
-  <br>
-  <textarea class='{{class()}}' list='input-list-{{id()}}' id='{{id()}}'
-      placeholder='{{placeholder()}}' type='{{type()}}' name='{{name()}}'
-      {{attrString()}}></textarea>
+  <input class='{{class()}}' list='input-list-{{id()}}' id='{{id()}}'
+      placeholder='{{placeholder()}}' type='number' name='{{name()}}'
+      max='{{max()}}' min='{{min()}}' step='{{step()}}'>
   <div class='error' id='{{errorMsgId()}}' hidden>{{errorMsg()}}</div>
 </{{inline() ? 'span' : 'div'}}>
