--- a/services/mike/public/html/templates/index.html
+++ b/services/mike/public/html/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script type="text/javascript" src='/mike/js/index.js'></script>
+    <script src="https://kit.fontawesome.com/234ae94193.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
     <link rel="stylesheet" href="/mike/styles/mike.css">
     <title></title>
