--- a/public/html/templates/input/decision/decision-modification.html
+++ b/public/html/templates/input/decision/decision-modification.html
@@ -1,20 +1,31 @@
 
-<{{tag()}} class='decision-input-cnt mod' node-id='{{id()}}' {{reachable() ? '' : 'hidden'}}>
-  <span node-id='{{id()}}'>
-    <span:t repeat='input in inputArray()'
+<div class='decision-input-cnt mod' node-id='{{id()}}' {{reachable() ? '' : 'hidden'}}>
+  <div node-id='{{id()}}' class='card'>
+    <div class='payload-cnt'>{{payloadHtml()}}</div>
+    <button class='then-button modify'>
+      Then...
+    </button>
+    <div class='then-input-tree tab'></div>
+    <div:t repeat='input in inputArray()'
           class='decision-input-array-cnt pad {{class}}' index='{{$index}}'>
       {{input.html()}}
+      <div class='edit-input-cnt'><button>
+        <i class="fas fa-pencil-alt"></i>
+      </button></div>
       <span>
-        <button class='conditional-button' target-id='{{input.id()}}'>
-          If {{input.name()}} = {{input.value()}}
+        <button class='conditional-button modify' target-id='{{input.id()}}'>
+          If {{input.name()}}
         </button>
-        <div class='condition-input-tree tab'></div>
+        <div hidden class='condition-input-tree tab'></div>
         <div class='children-recurse-cnt tab' value='{{input.value()}}'>{{childrenHtml($index, true)}}</div>
       </span>
-      <br>
-    </span:t>
-  </span>
-  <div class='modification-add-input tab'>
-    {{inputTree().html()}}
+    </div:t>
+    <div class='tab'>{{childrenHtml(-1, true)}}</div>
+    <br>
+    <br>
+    <div class='modification-add-input tab'>
+      {{inputTree().html()}}
+    </div>
+    <div class='remove-btn-cnt'><button class='rm-node'>X</button></div>
   </div>
-</{{tag()}}>
+</div>
