--- a/public/html/templates/input/decision/decision.html
+++ b/public/html/templates/input/decision/decision.html
@@ -1,12 +1,13 @@
 
-<{{tag()}} class='decision-input-cnt' node-id='{{id()}}' {{reachable() ? '' : 'hidden'}}>
+<div class='decision-input-cnt' node-id='{{id()}}' {{reachable() ? '' : 'hidden'}}>
   <span id='{{id()}}'>
-    <span:t repeat='input in inputArray()'
+    <div class='payload-cnt'>{{payloadHtml()}}</div>
+    <div:t repeat='input in inputArray()'
         class='decision-input-array-cnt pad {{class}}' index='{{$index}}'>
       {{input.html()}}
       <div class='children-recurse-cnt tab' value='{{input.value()}}'>
         {{childrenHtml($index)}}
       </div>
-    </span:t>
+    </div:t>
   </span>
-</{{tag()}}>
+</div>
