--- a/public/html/templates/input/radio.html
+++ b/public/html/templates/input/radio.html
@@ -1,11 +1,14 @@
-<{{inline() ? 'span' : 'div'}}  class='input-cnt'{{hidden() ? ' hidden' : ''}}>
-  <label>{{label()}}</label>
-  <br>
-  <div class='tab'>
+<{{inline() ? 'span' : 'div'}}  class='input-cnt'{{hidden() ? ' hidden' : ''}}
+      input-id={{id()}}>
+  <label>{{label()}}:</label>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class='inline tab'>
     <span:t repeat='key, val in list()'>
       <label>{{isArray() ? val : key}}</label>
       <input type='radio' {{(isArray() ? val : key) === value() ? 'checked' : ''}}
-             class='{{class()}}' id='{{id()}}' name='{{name()}}'>
+             class='{{class()}}' id='{{id()}}' name='{{uniqueName()}}'
+            value='{{val}}'>
+      &nbsp;&nbsp;
     </span:t>
   </div>
 </{{inline() ? 'span' : 'div'}}>
