--- a/public/html/templates/input/table.html
+++ b/public/html/templates/input/table.html
@@ -1,17 +1,18 @@
-<{{inline() ? 'span' : 'div'}}  class='input-cnt'{{hidden() ? ' hidden' : ''}}>
+<{{inline() ? 'span' : 'div'}}  class='input-cnt'{{hidden() ? ' hidden' : ''}}
+      input-id={{id()}}>
   <label>{{label()}}</label>
   <br>
   <div class='tab'>
-    <table>
+    <table border="1">
       <tbody>
         <tr>
           <td></td>
-          <td:t repeat='col in columns()'>{{col}}</td:t>
+          <td:t repeat='name in columnNames()'>{{name}}</td:t>
         </tr>
         <tr:t repeat='rowIndex, row in rows()'>
           <td>{{row}}</td>
-          <td:t repeat='colIndex, col in columns()'>
-            <input type='{{type()}}' name='{{id()}}-{{row}}'>
+          <td:t repeat='col in columns(rowIndex)'>
+            {{col.html()}}
           </td:t>
         </tr:t>
       </tbody>
