--- a/services/mitch/public/html/templates/index.html
+++ b/services/mitch/public/html/templates/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src='/mike/js/index.js'></script>
+    <script type="text/javascript" src='/mitch/js/index.js'></script>
     <script src="https://kit.fontawesome.com/234ae94193.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
-    <link rel="stylesheet" href="/mike/styles/mike.css">
+    <link rel="stylesheet" href="/mitch/styles/mitch.css">
     <title></title>
   </head>
   <body>
