--- a/public/html/templates/input/decision/decision-modification.html
+++ b/public/html/templates/input/decision/decision-modification.html
@@ -1,5 +1,5 @@
 
-<div class='decision-input-cnt mod' node-id='{{id()}}' {{reachable() ? '' : 'hidden'}}>
+<div class='decision-input-cnt mod' node-id='{{id()}}' recursion="disabled">
   <div node-id='{{id()}}' class='card'>
     <div class='payload-cnt'>{{payloadHtml()}}</div>
     <button class='then-button modify'>
@@ -17,10 +17,10 @@
           If {{input.name()}}
         </button>
         <div hidden class='condition-input-tree tab'></div>
-        <div class='children-recurse-cnt tab' value='{{input.value()}}'>{{childrenHtml($index, true)}}</div>
+        <div class='children-recurse-cnt tab' value='{{input.value()}}'></div>
       </span>
     </div:t>
-    <div class='tab'>{{childrenHtml(-1, true)}}</div>
+    <div class='orphan-cnt tab'></div>
     <br>
     <br>
     <div class='modification-add-input tab'>
