--- a/public/html/templates/input/decision/decision.html
+++ b/public/html/templates/input/decision/decision.html
@@ -1,13 +1,13 @@
 
-<div class='decision-input-cnt' node-id='{{id()}}'
+<div class='decision-input-cnt card{{inputArray().length === 0 ? ' empty' : ''}}' node-id='{{id()}}'
       recursion="disabled">
   <span id='{{id()}}'>
     <div class='payload-cnt'>{{payloadHtml()}}</div>
+    {{inputArray().length === 0 ? '<br><br>' : ''}}
     <div:t repeat='input in inputArray()'
         class='decision-input-array-cnt pad {{class}}' index='{{$index}}'>
       {{input.html()}}
-      <div class='children-recurse-cnt tab' value='{{input.value()}}'></div>
     </div:t>
-    <div class='orphan-cnt tab'></div>
+    <div class='orphan-cnt tab'>{{childrenHtml()}}</div>
   </span>
 </div>
