--- a/public/html/templates/input/decision/decisionTree.html
+++ b/public/html/templates/input/decision/decisionTree.html
@@ -1,5 +1,5 @@
 <div class='{{node.tree().class()}} {{DecisionInputTree.class}}' tree-id='{{node.tree().id()}}'
-      input-id={{node.tree().id()}} node-id='{{node.id()}}'>
+      input-id='{{node.tree().id()}}' node-id='{{node.id()}}'>
   {{header}}
   {{inputHtml}}
   <div {{node.tree().hideButton ? 'hidden' : ''}}>
