--- a/public/html/templates/input/measurement.html
+++ b/public/html/templates/input/measurement.html
@@ -1,4 +1,4 @@
-<div class='fit input-cnt'{{hidden() ? ' hidden' : ''}} input-id={{id()}}>
+<div class='fit input-cnt'{{hidden() ? ' hidden' : ''}} input-id='{{id()}}'>
   <label>{{label()}}</label>
   <input class='measurement-input {{class()}}' id='{{id()}}' value='{{value() ? value() : ""}}'
       placeholder='{{placeholder()}}' type='{{type()}}' name='{{name()}}'>
