--- a/public/html/templates/input/number.html
+++ b/public/html/templates/input/number.html
@@ -1,5 +1,5 @@
 <{{inline() ? 'span' : 'div'}} class='input-cnt'{{hidden() ? ' hidden' : ''}}
-      input-id={{id()}}>
+      input-id='{{id()}}'>
   <label>{{label()}}</label>
   <input class='{{class()}}' list='input-list-{{id()}}' id='{{id()}}'
       placeholder='{{placeholder()}}' type='number' name='{{name()}}'
