--- a/services/mitch/public/html/templates/playground.html
+++ b/services/mitch/public/html/templates/playground.html
@@ -1,6 +1,6 @@
 <div>
   <button  id='update-tree-display-btn'>Update</button>
-  <button class='modify-edit' id='modify-btn'>Modify</button>
+  <button id='modify-btn'>Modify</button>
 </div>
 <div id='config-body'></div>
 <div id='test-ground'></div>
