--- a/public/html/templates/input/textarea.html
+++ b/public/html/templates/input/textarea.html
@@ -1,5 +1,5 @@
 <{{inline() ? 'span' : 'div'}} class='input-cnt'{{hidden() ? ' hidden' : ''}}
-      input-id={{id()}}>
+      input-id='{{id()}}'>
   <label>{{label()}}</label>
   <br>
   <textarea class='{{class()}}' list='input-list-{{id()}}' id='{{id()}}'
