--- a/services/mitch/public/html/templates/index.html
+++ b/services/mitch/public/html/templates/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src='/mitch/js/index.js'></script>
     <script src="https://kit.fontawesome.com/234ae94193.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
+    <link rel="stylesheet" href="/styles/icons.css">
     <link rel="stylesheet" href="/mitch/styles/mitch.css">
     <title></title>
   </head>
