--- a/services/mitch/public/html/templates/configure.html
+++ b/services/mitch/public/html/templates/configure.html
@@ -3,4 +3,15 @@
   <button class='modify-edit' id='modify-btn'>Modify</button>
 </div>
 <div id='config-body'></div>
-<div id='test-ground'></div>
+<div>
+  <br>
+  <br>
+  <div style='display: inline-block'>
+    <textarea id='json-data'></textarea>
+    <br>
+    <button id="copy">Copy</button>
+    <button id='paste' style='float:right'>Paste</button>
+    <br><br>
+    <button id="save" class=\'modify-edit\'>Save</button>
+  </div>
+</div>
