small style change

--- a/services/mitch/public/html/templates/configure.html
+++ b/services/mitch/public/html/templates/configure.html
@@ -10,8 +10,8 @@
     <textarea id='json-data'></textarea>
     <br>
     <button id="copy">Copy</button>
-    <button id='paste' style='float:right'>Paste</button>
+    <button id='paste' class='modify-edit' style='float:right'>Paste</button>
     <br><br>
-    <button id="save" class=\'modify-edit\'>Save</button>
+    <button id="save" class='modify-edit'>Save</button>
   </div>
 </div>
