last change i swear all modification code has been moved t modDecisionTree

--- a/public/html/templates/input/decision/decision-modification.html
+++ b/public/html/templates/input/decision/decision-modification.html
@@ -29,4 +29,16 @@
     </div>
 
     <div class='close-cnts' hidden><button class='modify-edit'>X</button></div>
+    <br>
+    <br>
+    <div class='copy-save-paste-cnt'>
+      <div style='display: inline-block'>
+        <textarea id='json-data'></textarea>
+        <br>
+        <button id="copy">Copy</button>
+        <button id='paste' class='modify-edit' style='float:right'>Paste</button>
+        <br><br>
+        <button id="save" class='modify-edit'>Save</button>
+      </div>
+    </div>
 </div>
