remove font awesome dependency

--- a/public/html/templates/input/decision/decision-modification.html
+++ b/public/html/templates/input/decision/decision-modification.html
@@ -7,10 +7,10 @@
       <button hidden class='add-btn modify-edit'mod-id='4'>Add Input</button>
     </div>
     <div hidden class='if-edit-cnt'>
-      <button class='edit-btn modify-edit' mod-id='2'>
-        <i class="fas fa-pencil-alt"></i>
+      <button class='twentys edit-btn modify-edit' mod-id='2'>
+        <i class="inline gg-pen"></i>
       </button>
-      <button class='conditional-btn modify-edit' mod-id='3'>
+      <button class='twentys conditional-btn modify-edit' mod-id='3'>
         If
       </button>
     </div>
