files seam to be saving correctly, 2d layout can add objects- movement and snap interactions need work

--- a/services/cabinet/public/html/templates/cabinet/head.html
+++ b/services/cabinet/public/html/templates/cabinet/head.html
@@ -2,6 +2,7 @@
   {{$index}})
   <input class='cabinet-id-input' name='name' prop-update='{{$index}}.name'
         index='{{$index}}' display-id='{{displayId}}' value='{{cabinet.name()}}'>
+  &nbsp;&nbsp;&nbsp;&nbsp;
   Size:
   <div class='cabinet-dem-cnt' cabinet-id='{{cabinet.id()}}'>
     <label>W:</label>
